--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "litecard-sdk"
+name = "litecard"
 version = "0.1.0"
-description = "Python SDK for Litecard API integration"
+description = "Python SDK for Litecard API - Create and manage digital wallet cards"
 authors = [
     {name = "Benjamin Herro", email = "benjamincsherro@hotmail.com"}
 ]
@@ -15,10 +15,10 @@ requires-python = ">=3.10"
 dependencies = [
     "typing-extensions>=4.0.0",
     "leaky-bucket-py>=0.1.3,<0.2.0",
-    "pydantic>=2.11.7,<3.0.0",
+    "pydantic>=2.11.7,<3.0.0", 
     "httpx>=0.28.1,<0.29.0"
 ]
-keywords = ["litecard", "api", "sdk", "payment", "cards"]
+keywords = ["litecard", "api", "sdk", "digital", "wallet", "cards", "apple", "google", "samsung", "loyalty"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -31,7 +31,9 @@ classifiers = [
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Office/Business :: Financial",
-    "Topic :: Software Development :: Libraries :: Application Frameworks"
+    "Topic :: Software Development :: Libraries :: Application Frameworks",
+    "Topic :: Communications",
+    "Topic :: Internet :: WWW/HTTP",
 ]
 
 [project.optional-dependencies]
@@ -49,6 +51,7 @@ dev = [
 Homepage = "https://github.com/DuneRaccoon/litecard-sdk"
 Repository = "https://github.com/DuneRaccoon/litecard-sdk"
 "Bug Reports" = "https://github.com/DuneRaccoon/litecard-sdk/issues"
+Documentation = "https://github.com/DuneRaccoon/litecard-sdk#readme"
 
 [tool.setuptools.packages.find]
 where = ["."]
@@ -61,3 +64,20 @@ target-version = ['py310']
 [tool.isort]
 profile = "black"
 line_length = 100
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "--strict-markers",
+    "--strict-config",
+    "--verbose",
+]
